# print-tool

./: .gitignore  .gitmodules  MANIFEST.in  Makefile  README.md  instalar.md  pyproject.toml  requirements.txt  setup.py
docs/: index.html  printtool.html  search.js
docs/printtool/: MiLibrerias.html  main.html  printtool.html
docs/printtool/MiLibrerias/: FuncionesArchivos.html  FuncionesBotTelegram.html  FuncionesLogging.html  FuncionesMQTT.html
src/printtool/: costosImpresora.py  dataGcode.py  extrasGui.py  inventario.py  main.py  paginaActualizar.py  paginaConfig.py  paginaPrecio.py  paginaPurga.py  printtool.py
src/printtool/config/: info.md
src/printtool/utilidades/: miDolibarr.py  miSpoolman.py  token_search_select.css  token_search_select.js  token_search_select.py
